fixed some SASS math issues with django compressor

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "home/base.html" %}
 
 <!-- load wagtailcore_tags by adding this: -->
 {% load wagtailcore_tags %}
