--- a/home/static/home/scss/imports/mixins/_grid.scss
+++ b/home/static/home/scss/imports/mixins/_grid.scss
@@ -31,9 +31,10 @@
 }
 
 @mixin make-col($size, $columns: $grid-columns) {
-	flex: 0 0 percentage(math.div($size, $columns));
+	$percentage: ($size / $columns) * 100%;
+	flex: 0 0 $percentage;
 	// Add a `max-width` to ensure content within each column does not blow out
 	// the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
 	// do not appear to require this.
-	max-width: percentage(math.div($size, $columns));
+	max-width: $percentage;
 }
