--- a/home/static/home/scss/imports/mixins/_typo.scss
+++ b/home/static/home/scss/imports/mixins/_typo.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
 @mixin fsize($px, $important: false) {
-	$rem: math.div($px, $font-base-unit);
+	$rem: ($px / $font-base-unit);
 	font-size: #{$rem}rem;
 }
